# tauri-plugin-sqlx

./: .gitignore  Cargo.toml  package.json  rollup.config.mjs  tsconfig.json
guest-js/: index.ts
src/: api-iife.js  commands.rs  lib.rs  plugin.rs  wrapper.rs
src/decode/: mod.rs  mssql.rs
