[package]
name = "tauri-plugin-sql"
version = "2.0.0-alpha.0"
description = "Interface with SQL databases."
license = "MIT"
edition = "2021"
rust-version = "1.56.0"

[package.metadata.docs.rs]
features = [ "sqlite" ]

[dependencies]
#serde = { workspace = true }
#serde_json = { workspace = true }
#tauri = { workspace = true }
#log = { workspace = true }
#thiserror = { workspace = true }
futures-core = "0.3"
log = "0.4.18"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "json", "time" ] }
tauri = "0.11.1"
thiserror = "1.0.65"
time = "0.3"
tokio = { version = "1", features = [ "sync" ] }

[features]
sqlite = [ "sqlx/sqlite" ]
mysql = [ "sqlx/mysql" ]
postgres = [ "sqlx/postgres" ]
mssql = [ "sqlx/mssql" ]
