[package]
name = "tauri-plugin-sql-dev"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde.workspace = true
#serde_json.workspace = true
#tauri.workspace = true
#log.workspace = true
#thiserror.workspace = true
#futures-core = "0.3"
#sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "json", "time"] }
#time = "0.3"
#tokio = { version = "1", features = ["sync"] }

# futures-core = "0.3"
# serde = { version = "1", features = ["derive"] }
# log = "0.4"
# tauri = "2.0.0-alpha.9"
# #tauri-build = "2.0.0-alpha.5"
# serde_json = "1"
# thiserror = "1"
# tokio = { version = "1.29.1", features = ["full"] }
# sqlx = { version = "0.6.3", default-features = false, features = [
#   "macros",
#   "runtime-tokio-rustls",
#   "chrono",
#   "uuid",
#   "json",
#   "migrate"
# ] }
# time = "0.3"
# ntapi = "0.4.1"
# #tauri = "2.0.0-rc.17"
# indexmap = { version = "2", features = ["serde"] }
# tauri-plugin = "2.3.0"

serde = { version = "1", features = ["derive"] }
tracing = "0.1"
log = "0.4"
tauri = { version = "2.6", default-features = false }
tauri-build = "2.3"
tauri-plugin = "2.3"
tauri-utils = "2.5"
serde_json = "1"
thiserror = "2"
url = "2"
schemars = "0.8"
dunce = "1"
specta = "^2.0.0-rc.16"
glob = "0.3"
zbus = "5"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

#sqlx = { version = "0.8", features = ["json", "time"] }
sqlx = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "time",
  "macros",
  "chrono",
  "uuid",
  "json",
  "migrate",
  "sqlite",
  "postgres",
  "mysql",
  "mssql",
] }
time = "0.3"
#tokio = { version = "1", features = ["sync"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
indexmap = { version = "2", features = ["serde"] }
futures-core = "0.3.31"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.5", features = [] }

[features]
default = []
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
mssql = ["sqlx/mssql"]
# custom-protocol = ["tauri/custom-protocol"]
